syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 1232
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarFightPropNotify {
  uint64 avatar_guid = 3;
  map<uint32, float> fight_prop_map = 6;
}
