syntax = "proto3";

package proto;
option go_package = "./;proto";

message AvatarTeam {
  repeated uint64 avatar_guid_list = 9;
  string team_name = 13;
}
