syntax = "proto3";

package proto;
option go_package = "./;proto";


message FetterData {
  uint32 fetter_id = 1;
  uint32 fetter_state = 2;
  repeated uint32 cond_index_list = 3;
}
