syntax = "proto3";

package proto;
option go_package = "./;proto";

import "PlayerDieType.proto";
import "ServerBuff.proto";

message LifeStateChangeNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1231;
  }

  uint32 entity_id = 4;
  uint32 life_state = 6;
  uint32 source_entity_id = 5;
  string attack_tag = 1;
  PlayerDieType die_type = 13;
  uint32 move_reliable_seq = 9;
  repeated ServerBuff server_buff_list = 14;
}
