syntax = "proto3";

package proto;
option go_package = "./;proto";


message Weapon {
  uint32 level = 1;
  uint32 exp = 2;
  uint32 promote_level = 3;
  map<uint32, uint32> affix_map = 4;
}
